ifds/src/tests/verification/snapshots/ifds__tests__verification___orig_nested_call_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (6) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (7) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (8) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (0, 2) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[font=\tiny] at (3.5, 0.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (0) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (1) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (2) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (9, 2) { };
\node[font=\tiny] at (7.5, 0.5) {Call(mytesttwo, [0], [1])};
\node[font=\tiny] at (7.5, 1.5) {Return([1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (3) [bend right] edge  node { } (1);
		\path[->, blue] (3) [bend right] edge  node { } (2);
		\path[->, blue] (3) [loop right] edge  node { } (3);
		\path[->, blue] (3) [bend right] edge  node { } (4);
		\path[->, blue] (3) [bend right] edge  node { } (5);
		\path[->, blue] (9) [bend right] edge  node { } (6);
		\path[->, blue] (9) [bend right] edge  node { } (7);
		\path[->, blue] (9) [bend right] edge  node { } (8);
		\path[->, blue] (9) [loop right] edge  node { } (9);
		\path[->, blue] (9) [bend right] edge  node { } (10);
		\path[->, blue] (9) [bend right] edge  node { } (11);


                \end{tikzpicture}
            \end{document}
