ifds/src/tests/verification/snapshots/ifds__tests__verification___orig_nested_call_global_circuit_breaker_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (9) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (10) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (11) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (12) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (0, 3) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Assign(-1, 0)};
\node[font=\tiny] at (-1.5, 2.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (4) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (6, 3) { };
\node[font=\tiny] at (4.5, 0.5) {Const(-1, 1.0)};
\node[font=\tiny] at (4.5, 1.5) {Assign(0, -1)};
\node[font=\tiny] at (4.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (0) at (12, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (11, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (11, 2) { };
\node[font=\tiny] at (9.5, 0.5) {Call(mytesttwo, [0], [1])};
\node[font=\tiny] at (9.5, 1.5) {Return([1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (4) [loop right] edge  node { } (4);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (2);
		\path[->, blue] (1) [bend right] edge  node { } (3);
		\path[->, blue] (5) [loop right] edge  node { } (5);
		\path[->, blue] (5) [bend right] edge  node { } (6);
		\path[->, blue] (5) [bend right] edge  node { } (7);
		\path[->, blue] (5) [bend right] edge  node { } (8);
		\path[->, blue] (13) [bend right] edge  node { } (9);
		\path[->, blue] (13) [bend right] edge  node { } (10);
		\path[->, blue] (13) [bend right] edge  node { } (11);
		\path[->, blue] (13) [bend right] edge  node { } (12);
		\path[->, blue] (13) [loop right] edge  node { } (13);
		\path[->, blue] (13) [bend right] edge  node { } (14);
		\path[->, blue] (13) [bend right] edge  node { } (15);
		\path[->, blue] (13) [bend right] edge  node { } (16);


                \end{tikzpicture}
            \end{document}
