ifds/src/tests/verification/snapshots/ifds__tests__verification___orig_nested_call_memory_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (20) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (21) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (22) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (23) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (24) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (25) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (26) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (27) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (28) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (29) at (0, 3) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Store(0, 0.0, 0)};
\node[font=\tiny] at (-1.5, 2.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (11) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (12) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (13) at (7, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (14) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (15) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (16) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (5, 2) { };
\node[font=\tiny] at (3.5, 0.5) {Load(0, 0.0, 1)};
\node[font=\tiny] at (3.5, 1.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (0) at (12, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (1) at (12, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (2) at (12, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (3) at (11, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (4) at (11, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (5) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (6) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (7) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (9, 2) { };
\node[font=\tiny] at (7.5, 0.5) {Call(mytesttwo, [0], [1])};
\node[font=\tiny] at (7.5, 1.5) {Return([1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (11) [loop right] edge  node { } (11);
		\path[->, blue] (11) [bend right] edge  node { } (12);
		\path[->, blue] (11) [bend right] edge  node { } (13);
		\path[->, blue] (5) [bend right] edge  node { } (3);
		\path[->, blue] (5) [bend right] edge  node { } (4);
		\path[->, blue] (5) [loop right] edge  node { } (5);
		\path[->, blue] (5) [bend right] edge  node { } (6);
		\path[->, blue] (5) [bend right] edge  node { } (7);
		\path[->, blue] (5) [bend right] edge  node { } (9);
		\path[->, blue] (5) [bend right] edge  node { } (10);
		\path[->, blue] (14) [bend right] edge  node { } (12);
		\path[->, blue] (14) [bend right] edge  node { } (13);
		\path[->, blue] (14) [loop right] edge  node { } (14);
		\path[->, blue] (14) [bend right] edge  node { } (15);
		\path[->, blue] (14) [bend right] edge  node { } (16);
		\path[->, blue] (8) [bend right] edge  node { } (3);
		\path[->, blue] (8) [bend right] edge  node { } (4);
		\path[->, blue] (8) [bend right] edge  node { } (6);
		\path[->, blue] (8) [bend right] edge  node { } (7);
		\path[->, blue] (8) [loop right] edge  node { } (8);
		\path[->, blue] (8) [bend right] edge  node { } (9);
		\path[->, blue] (8) [bend right] edge  node { } (10);
		\path[->, blue] (17) [loop right] edge  node { } (17);
		\path[->, blue] (17) [bend right] edge  node { } (18);
		\path[->, blue] (17) [bend right] edge  node { } (19);
		\path[->, blue] (26) [bend right] edge  node { } (20);
		\path[->, blue] (26) [bend right] edge  node { } (21);
		\path[->, blue] (26) [bend right] edge  node { } (22);
		\path[->, blue] (26) [bend right] edge  node { } (23);
		\path[->, blue] (26) [bend right] edge  node { } (24);
		\path[->, blue] (26) [bend right] edge  node { } (25);
		\path[->, blue] (26) [loop right] edge  node { } (26);
		\path[->, blue] (26) [bend right] edge  node { } (27);
		\path[->, blue] (26) [bend right] edge  node { } (28);
		\path[->, blue] (26) [bend right] edge  node { } (29);


                \end{tikzpicture}
            \end{document}
