ifds/src/tests/verification/snapshots/ifds__tests__verification___orig_return_branches_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (26) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (27) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (28) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (29) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (30) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (31) at (0, 2) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 5.0)};
\node[font=\tiny] at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (0) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (1) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (2) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (4) at (5, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (5, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (6) at (5, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (7) at (5, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (8) at (5, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (9) at (5, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (10) at (5, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (11) at (5, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (12) at (5, 12) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (4, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (20) at (4, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (21) at (4, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (22) at (4, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (23) at (4, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (24) at (4, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (25) at (4, 12) { };
\node[font=\tiny] at (2.5, 0.5) {Const(1, 1.0)};
\node[font=\tiny] at (2.5, 1.5) {Conditional(1, [1, 2])};
\node[font=\tiny] at (2.5, 2.5) {Block(1)};
\node[font=\tiny] at (2.5, 3.5) {Const(1, 2.0)};
\node[font=\tiny] at (2.5, 4.5) {Const(2, 3.0)};
\node[font=\tiny] at (2.5, 5.5) {Return([1])};
\node[font=\tiny] at (2.5, 6.5) {Jump(3)};
\node[font=\tiny] at (2.5, 7.5) {Block(2)};
\node[font=\tiny] at (2.5, 8.5) {Const(2, 4.0)};
\node[font=\tiny] at (2.5, 9.5) {Jump(3)};
\node[font=\tiny] at (2.5, 10.5) {Block(3)};
\node[font=\tiny] at (2.5, 11.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (13) [loop right] edge  node { } (13);
		\path[->, blue] (13) [bend right] edge  node { } (14);
		\path[->, blue] (13) [bend right] edge  node { } (15);
		\path[->, blue] (13) [bend right] edge  node { } (16);
		\path[->, blue] (13) [bend right] edge  node { } (17);
		\path[->, blue] (13) [bend right] edge  node { } (18);
		\path[->, blue] (13) [bend right] edge  node { } (19);
		\path[->, blue] (13) [bend right] edge  node { } (20);
		\path[->, blue] (13) [bend right] edge  node { } (21);
		\path[->, blue] (13) [bend right] edge  node { } (22);
		\path[->, blue] (13) [bend right] edge  node { } (23);
		\path[->, blue] (13) [bend right] edge  node { } (24);
		\path[->, blue] (13) [bend right] edge  node { } (25);
		\path[->, blue] (29) [bend right] edge  node { } (26);
		\path[->, blue] (29) [bend right] edge  node { } (27);
		\path[->, blue] (29) [bend right] edge  node { } (28);
		\path[->, blue] (29) [loop right] edge  node { } (29);
		\path[->, blue] (29) [bend right] edge  node { } (30);
		\path[->, blue] (29) [bend right] edge  node { } (31);


                \end{tikzpicture}
            \end{document}
